force-app/main/default/objects/GiftTransactionDesignation/fields/Acknowledgement_Status__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_Status__c</fullName>
    <label>Acknowledgement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Do Not Acknowledge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>