force-app/main/default/objects/GiftTransactionDesignation/fields/Donor_Name__c.field-meta.xml
<CustomField>
    <fullName>Donor_Name__c</fullName>
    <description>Donor/funder name from the parent Gift Transaction, surfaced on the designation line so each GL line row stands alone in the monthly Accounting export.</description>
    <formula>GiftTransaction.Donor_Name__c</formula>
    <label>Donor Name</label>
    <type>Text</type>
</CustomField>