force-app/main/default/objects/GiftTransactionDesignation/fields/Fund_Designation__c.field-meta.xml
<CustomField>
    <fullName>Fund_Designation__c</fullName>
    <description>Name of the Gift Designation (fund) this line points at, surfaced on the line for the monthly Accounting export.</description>
    <formula>GiftDesignation.Name</formula>
    <label>Fund / Designation</label>
    <type>Text</type>
</CustomField>