force-app/main/default/objects/GiftTransactionDesignation/fields/Gift_Date__c.field-meta.xml
<CustomField>
    <fullName>Gift_Date__c</fullName>
    <description>Transaction Completion Date of the parent Gift Transaction, surfaced on the designation line so each GL line is self-contained for the monthly Accounting export and can be filtered by date range at the line grain.</description>
    <formula>GiftTransaction.TransactionDate</formula>
    <label>Gift Date</label>
    <type>Date</type>
</CustomField>