force-app/main/default/objects/GiftTransactionDesignation/fields/GL_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>GL_Cost_Center__c</fullName>
    <description>Cost center from the Gift Designation (fund) this line posts to, surfaced on the line for the monthly Accounting export.</description>
    <formula>GiftDesignation.Cost_Center__c</formula>
    <label>Cost Center</label>
    <type>Text</type>
</CustomField>