force-app/main/default/objects/GiftTransactionDesignation/fields/GL_Payout_Date__c.field-meta.xml
<CustomField>
    <fullName>GL_Payout_Date__c</fullName>
    <description>Payout / settled-funds date. Sourced from the parent Gift Transaction Grant Payment Date (populated for grants; blank for other gift types until a settlement date is captured).</description>
    <formula>GiftTransaction.Grant_Payment_Date__c</formula>
    <label>Payout Date</label>
    <type>Date</type>
</CustomField>