force-app/main/default/objects/GiftTransactionDesignation/fields/GL_Revenue_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Revenue_Code__c</fullName>
    <description>General ledger revenue code from the Gift Designation (fund) this line posts to, surfaced on the line for the monthly Accounting export.</description>
    <formula>GiftDesignation.Revenue_Code__c</formula>
    <label>Revenue Code</label>
    <type>Text</type>
</CustomField>