force-app/main/default/objects/GiftTransactionDesignation/fields/Journal_Entry__c.field-meta.xml
<CustomField>
    <fullName>Journal_Entry__c</fullName>
    <label>Journal Entry #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>