force-app/main/default/objects/GiftTransactionDesignation/fields/Payment_Amount_Total__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount_Total__c</fullName>
    <description>Full current amount of the parent Gift Transaction (the whole payment), surfaced for reference alongside the line Amount. The line Amount is what posts to this revenue code / cost center; this is the total payment it belongs to.</description>
    <formula>GiftTransaction.CurrentAmount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>