force-app/main/default/objects/GiftTransactionDesignation/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>Payment Method of the parent Gift Transaction (as text), surfaced on the designation line for the monthly Accounting export.</description>
    <formula>TEXT(GiftTransaction.PaymentMethod)</formula>
    <label>Payment Method</label>
    <type>Text</type>
</CustomField>