force-app/main/default/objects/GiftTransactionDesignation/fields/Revenue_Code__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Code__c</fullName>
    <label>Revenue Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>